[tool.poetry]
name = "docs"
version = "0.0.1"
description = "docs environment"
authors = ["hnakano863 <notchi863@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.3.0"
statsmodels = "^0.11.1"
matplotlib = "^3.2.1"
numpy = "^1.18.4"
pandas = "^1.0.4"
lifelines = "^0.24.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
